Final mdx with code

--- a/presentation.mdx
+++ b/presentation.mdx
@@ -5,7 +5,7 @@ export { future as theme } from 'mdx-deck/themes'
 ### React Native Animations WorkShop
 ---
 ### Agenda
-1. Why Animations important in Mobile
+1. Animations, How it works and Why it's important in Mobile?
 2. Layout Animations 
 3. Animated
 4. Gesture Systems
@@ -13,7 +13,9 @@ export { future as theme } from 'mdx-deck/themes'
 6. Lottie Implementation
 7. Performance tips
 ---
-### Why Animations important in Mobile
+#### Animations, How it works and Why it's important in Mobile?
+
+<Image width="1024px" height="500px" src='./images/Intro.png' />
 ----    
 
 
@@ -22,7 +24,7 @@ export default Split
 
 <span>Better User Experience</span>
 
-<Image width="500px" height="500px" src='https://imagejournal.org/wp-content/uploads/bb-plugin/cache/23466317216_b99485ba14_o-panorama.jpg' />
+<Image width="500px" height="500px" src='./images/visualFeedback.gif' />
 
 ---
 
@@ -30,7 +32,7 @@ export default Split
 
 <span>Visual Feedback (User interactions)</span>
 
-<Image width="500px" height="500px" src='https://imagejournal.org/wp-content/uploads/bb-plugin/cache/23466317216_b99485ba14_o-panorama.jpg' />
+<Image width="500px" height="500px" src='https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/ecde6b1e-fd59-4f5a-8bc1-2bfd523a9b20/new-email-in-the-inbox.gif' />
 
 ---
 
@@ -38,7 +40,7 @@ export default Split
 
 <span>System status (Ticket status bar)</span>
 
-<Image width="500px" height="500px" src='https://imagejournal.org/wp-content/uploads/bb-plugin/cache/23466317216_b99485ba14_o-panorama.jpg' />
+<Image width="500px" height="500px" src='./images/statusBarOpti.gif' />
 
 ---
 
@@ -46,7 +48,7 @@ export default Split
 
 <span>User Engagement <br/>(Facebook emoji's, Tinder Swipe)</span>
 
-<Image width="500px" height="500px" src='https://imagejournal.org/wp-content/uploads/bb-plugin/cache/23466317216_b99485ba14_o-panorama.jpg' />
+<Image width="500px" height="500px" src='https://yalantis.com/uploads/ckeditor/pictures/56/content_pixate.gif' />
 
 ---
 ### Layout Animations
